<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bookmarks"
            android:title="@string/menu_bookmarks" />
    </group>

    <group
        android:id="@+id/group_two"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_write"
            android:title="@string/menu_write" />
        <item
            android:id="@+id/nav_drafts"
            android:title="@string/menu_drafts"/>
    </group>

    <group
        android:id="@+id/group_three"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/nav_signout"
            android:orderInCategory="100"
            android:title="@string/action_signout"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about"/>
    </group>
</menu>
