<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_and_signup.LoginActivity">


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:lineSpacingExtra="8sp"
        android:text="Welcome \nBack"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textAppearance="@style/heading1"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginBottom="36dp"
        android:adjustViewBounds="true"
        android:background="@android:drawable/screen_background_light_transparent"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/buttsignin" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="349dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_text"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="@+id/email" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toTopOf="@+id/loading"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="343dp"
        android:layout_height="334dp"
        android:layout_marginStart="144dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_signin" />

    <TextView
        android:id="@+id/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="40dp"
        android:text="Don't have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/move2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="40dp"
        android:text="Sign Up "
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/move" />

</androidx.constraintlayout.widget.ConstraintLayout>