<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_and_signup.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<<<<<<< Updated upstream
    <EditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/input_text"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
=======
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:hint="@string/prompt_name"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
>>>>>>> Stashed changes

            <EditText
                android:id="@+id/password"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_text"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_text"
                android:ems="10"
                android:hint="Re-enter password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

<<<<<<< Updated upstream
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        app:layout_constraintVertical_bias="0.612" />

    <ImageButton
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:adjustViewBounds="true"
        android:background="@color/material_on_background_disabled"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/buttsignup" />

    <TextView
        android:id="@+id/move2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="60dp"
        android:text="Sign In "
        android:textColor="@color/colorPrimary"
        android:textStyle=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="Already have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/move2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_text"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="366dp"
        android:layout_height="421dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="400dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_signup" />
=======
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loading"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2" />

        <ImageButton
            android:id="@+id/signup"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="17dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading"
            app:srcCompat="@drawable/buttsignup" />

            <TextView
                android:id="@+id/move2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Already have an account? Sign In "
                android:textColor="@color/colorPrimary"
                android:textStyle=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup" />

            <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />
>>>>>>> Stashed changes

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="270dp"
                android:layout_height="227dp"
                android:layout_marginEnd="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_signup" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>